--- a/src/xEasyApp.Core/Repositories/_Generated/StoredProcedures.tt
+++ b/src/xEasyApp.Core/Repositories/_Generated/StoredProcedures.tt
@@ -5,6 +5,10 @@
     var sps = GetSPs(); 
     if(sps.Count>0){ 
 #>  
+//=============================================
+// 该代码文件有程序自动生成，
+// 生成时间: <#= DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss") #>
+// =============================================
 using System;
 using System.Data;
 
