--- a/src/xEasyApp.Web/Views/SysManage/RoleInfoList.cshtml
+++ b/src/xEasyApp.Web/Views/SysManage/RoleInfoList.cshtml
@@ -4,101 +4,146 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1">
-    <title>角色列表</title>
-      @Html.Css("main", "flexigrid")
+    <title>角色管理</title>
+    @Html.Css("main", "flexigrid","tree")
+    <style type="text/css">
+        .title
+        {
+            color:#15428b;
+            font-weight:bold; 
+            background:url("../../images/icons/grid.png") no-repeat 2px center;   
+            padding:2px 2px 2px 24px;
+            margin-left:5px;           
+            display:block;
+        }
+    </style>
 </head>
 <body>
 
-    <div class="MainContainer" style="margin: 0px 2px;">       
-       <table id="RoleInfoList" style="display:none;"></table>      
+    <div class="MainContainer" style="margin: 1px 0px 0xp 0px;overflow:hidden;">  
+      <table width="100%" cellpadding="0" cellspacing="0" class="tree_grid_panel_table">
+        <tbody>
+            <tr>
+                <td style="width:170px;">
+                    <div class="toolbar"><span class="title" >角色管理</span></div>
+                    <div id="ptree" style="border-right:#99bbe8 1px solid;border-bottom:#99bbe8 1px solid;"></div>
+                </td>
+                <td style="width:2px;">
+                </td>
+                <td>          
+                 <div id="titleheader" class="toolbar" style="border-left: #99bbe8 1px solid;"><span id="title" class="title">角色列表</span></div>      
+                 <table id="RoleList" style="display:none;"></table>      
+                </td>
+            </tr>
+        </tbody>
+       </table> 
+       <input type="hidden" value="" id="hdParentCode" />    
+       <input type="hidden" value="" id="hdParentName" />
     </div>
    
-    @Html.Js("jquery", "common",  "flexigrid")   
+    @Html.Js("jquery", "common",  "flexigrid","tree")   
 
     <script type="text/javascript">
         $(document).ready(function () {
             var maiheight = document.documentElement.clientHeight;
-            var mainWidth = document.documentElement.clientWidth - 4; // 减去边框和左边的宽度
-            var otherpm = 55;
+            var mainWidth = document.documentElement.clientWidth - 3 - 170; // 减去边框和左边的宽度
+            var otherpm = 82;
             var gh = maiheight - otherpm;
             var option = {
                 height: gh,
                 width: mainWidth,
                 url: '@Url.Action("RoleInfoList")',
                 colModel: [
-                    { display: '角色标识', name: 'RoleCode', width: 100, sortable: false, align: 'left', iskey: true },
+                    { display: '角色ID', name: 'RoleID', width: 60, sortable: false, align: 'left', hide: true, iskey: true },
+                    { display: '角色代码', name: 'RoleCode', width: 80, sortable: false, align: 'left', iskey: true },
 			        { display: '角色名称', name: 'RoleName', width: 100, sortable: false, hide: false, align: 'left' },
-                    { display: '系统角色', name: 'IsSystem', width: 60, sortable: false, align: 'left', process: fromIsSystem },
-			        { display: '最后修改人', name: 'LastUpdateUserName', width: 80, sortable: false, align: 'left' },
-			        { display: '最后修改时间', name: 'LastUpdateTime', width: 150, sortable: false, align: 'left' },
-                    { display: '操作', name: 'RoleCode', width: 270, sortable: false, align: 'left', process: formatOp }
+                    { display: '说明', name: 'Remark', width: 120, sortable: false, hide: false, align: 'left' },
+                    { display: '角色类型', name: 'IsSystem', width: 120, sortable: false, hide: false, align: 'left', process: formatType },
+                    { display: '最后一次更新人', name: 'LastUpdateUserName', width: 100, sortable: false, hide: true, align: 'left' },
+                    { display: '最后一次更新时间', name: 'LastUpdateTime', width: 120, sortable: false, hide: true, align: 'left' },
+                    { display: '操作', name: 'RoleID', width: 120, sortable: false, align: 'left', process: formatOp, toggle: false }
 				],
                 buttons: [
-                            { name: 'Add', displayname: "新建", title: "新建角色", bclass: 'Add', onpress: toolbarItem_onclick },
+                            { name: 'Add', displayname: "新建", title: "新建权限", bclass: 'Add', onpress: toolbarItem_onclick },
                             { separator: true }
                          ],
-                sortname: "RoleCode",
+                sortname: "Sequence",
                 sortorder: "asc",
                 title: false,
                 usepager: false,
-                showcheckbox: false,
+                showcheckbox: true,
                 rowbinddata: true
             };
 
-            var grid = $("#RoleInfoList").flexigrid(option);
+            $("#ptree").treeview({
+                url: '@Url.Action("RoleTreeList")',
+                showcheck: false,
+                onnodeclick: TreeNode_Click,
+                theme: "bbit-tree-no-lines" //bbit-tree-lines ,bbit-tree-no-lines,bbit-tree-arrows
+            }).height(maiheight - 30);
 
-            function fromIsSystem(value) {
-                if (value == 'True') {
-                    return '是';
+            function TreeNode_Click(data) {
+                var p = { extParam: [{ name: "ParentID", value: data.id}] };
+                $("#RoleList").flexOptions(p).flexReload();
+                $("#hdParentCode").val(data.id);
+                $("#hdParentName").val(data.text);
+                $("#title").text(data.text);
+                //data.expand();
+            } // end of TreeNode_Click
+
+            var grid = $("#RoleList").flexigrid(option);
+
+            function formatType(value) {
+                if (value == '1' || value == "True") {
+                    return '系统';
                 } else {
-                    return '否';
+                    return '普通';
                 }
             }
             function formatOp(value, id, cell) {
                 var a = [];
-                if (cell[2] != "True") {
+                if (cell[4] == "False") {
                     a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='edit' title='编辑'>编辑</span></a>&nbsp;");
-                    a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:deleteRole('", value, "','", cell[1], "')\"><span class='delete' title='删除'>删除</span></a>&nbsp;");
+                    a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:del('", value, "','", cell[1], "')\"><span class='delete' title='删除'>删除</span></a>&nbsp;");
                 }
-                a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='setuser' title='查看角色用户'>查看用户</span></a>&nbsp;");
-                a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='setright' title='查看角色权限'>查看权限</span></a>");
-
                 return a.join("");
             }
             function toolbarItem_onclick(cmd, grid) {
                 if (cmd == "Add") {
-                    OpenModelWindow('@Url.Action("EditRole")', { width: 300, height: 170, caption: "新增角色", onclose: function () { showLoadingMsg("新增成功", { left: 300, top: 2 }, true, 3000); $("#RoleInfoList").flexReload(); } });
+                    var parentCode = $("#hdParentCode").val();
+                    var parentName = encodeURIComponent($("#hdParentName").val());
+                    OpenModelWindow('@Url.Action("EditRole")?ParentID=' + parentCode + '&ParentName=' + parentName, { width: 470, height: 370, caption: "新增权限",
+                        onclose: function () { showLoadingMsg("新增成功", { left: 300, top: 2 }, true, 3000); refresh(); }
+                    });
                 }
             } // end of toolbarItem_onclick
 
 
-        });               // end of ready
-        function deleteRole(roleCode,roleName)
-        {
-            if(confirm("你确定要删除["+roleName +"]?"))
-            {
-             showLoadingMsg("正在删除...",{left:300,top:2})
-              $.post('@Url.Action("DeleteRoleInfo","SysManage")', { id: roleCode },
-                     function (data) {                        
-                        if (data.IsSuccess) {
-                            showLoadingMsg("删除成功", { left: 300, top: 2 }, true, 3000);
-                           flushGrid();
-                        }
-                        else {
-                           hideLoadingMsg();
-                           showErrorTip(data.Msg, { left: 300, top: 2 }, true, 5000);
-                        }
-                    },
+        });
+        function del(roleId, roleName) {
+            if (confirm("你确定要删除[" + roleName + "]?")) {
+                showLoadingMsg("正在删除...", { left: 300, top: 2 })
+                $.post('@Url.Action("DeleteRoleInfo","SysManage")', { id: roleId },
+                     function (data) {
+                         if (data.IsSuccess) {
+                             showLoadingMsg("删除成功", { left: 300, top: 2 }, true, 3000);
+                             refresh();
+                         }
+                         else {
+                             hideLoadingMsg();
+                             showErrorTip(data.Msg, { left: 300, top: 2 }, true, 5000);
+                         }
+                     },
                 "json"
                 );
-           }
+            }
         }
-        function edit(rolecode) {
-            OpenModelWindow('@Url.Action("EditRole")/' + encodeURIComponent(rolecode), { width: 300, height: 170, caption: "新增角色", onclose: function () { showLoadingMsg("修改成功", { left: 300, top: 2 }, true, 3000); $("#RoleInfoList").flexReload(); } });
+        function edit(roleId) {
+            OpenModelWindow('@Url.Action("EditRole")/' + roleId, { width: 470, height: 370, caption: "修改角色信息", onclose: function () { showLoadingMsg("修改成功", { left: 300, top: 2 }, true, 3000); refresh(); } });
         }
-        function flushGrid() {
-            $("#RoleInfoList").flexReload(); //
-        } 
+        function refresh() {
+            $("#RoleList").flexReload(); //
+        }
     </script>
 </body>
 </html>
