--- a/src/xEasyApp.Web/Themes/Default/layout.css
+++ b/src/xEasyApp.Web/Themes/Default/layout.css
@@ -5,7 +5,14 @@
   padding:0px;
   height:100%;
   width:100%;
+  position:absolute;
 }
+body
+{
+    margin:0px;
+    padding:0px;
+    overflow:hidden;
+ }
 .top
 {
     height:30px;
