--- a/src/xEasyApp.Web/Views/SysManage/DeptUserlist.cshtml
+++ b/src/xEasyApp.Web/Views/SysManage/DeptUserlist.cshtml
@@ -19,7 +19,7 @@
         $(document).ready(function () {
             var maiheight = document.documentElement.clientHeight;
             var mainWidth = document.documentElement.clientWidth -2; // 减去边框和左边的宽度
-            var otherpm = 85;
+            var otherpm = 60;
             var gh = maiheight - otherpm;
             var option = {
                 height: gh,
@@ -32,10 +32,7 @@
                     { display: '最后修改人', name: 'LastUpdateUserName', width: 80, sortable: false, align: 'left' },
 			        { display: '最后修改时间', name: 'LastUpdateTime', width: 150, sortable: false, align: 'left' },
                     { display: '排序号', name: 'Sequence', width: 50, sortable: false, align: 'left', hide: true }
-				],
-                buttons: [                           
-                           
-                         ],
+				],              
                 sortname: "Sequence",
                 sortorder: "asc",
                 title:false,
@@ -47,9 +44,14 @@
             var grid = $("#UserInfoList").flexigrid(option);
 
             function fomartAccountState(value) {
+                if (value == "0") {
+                    return "正常";
+                }
+                else if (value == "1") {
+                    return "停用"
+                }
                 return value;
             }
-          
 
         });                // end of ready
       
