--- a/src/xEasyApp.Web/Views/SysManage/EditUser.cshtml
+++ b/src/xEasyApp.Web/Views/SysManage/EditUser.cshtml
@@ -8,7 +8,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <title>修改用户信息</title>
-    @Html.Css("main","form")
+    @Html.Css("main", "form", "dailog")
 
 <html>
 <head>
@@ -28,8 +28,8 @@
                   </td>
                   <td>
                         @Html.Hidden("DeptCode", Model.DeptCode)
-                         @Html.Hidden("DeptName", Model.DeptName)
-                        @Html.DisplayTextFor(x => x.DeptName) 
+                        @Html.Hidden("DeptName", Model.DeptName)
+                        <span id="lbDeptName"> @Html.DisplayTextFor(x => x.DeptName) </span>
                         <a href="javascript:void(0);" id="selectdept" style="margin-left:5px;" class="linkbtn"><span class="setGroup">移动</span></a>
                   </td>
                 
@@ -111,7 +111,7 @@
               </div>
               
     </div>
-    @Html.Js("jquery", "common", "form","validate")
+    @Html.Js("jquery", "common", "form","validate","dailog")
     <script type="text/javascript">
         $(document).ready(function (e) {
             $("#btnSave").click(function (e) {
@@ -163,12 +163,15 @@
             }, "不能包含以下符号: $<>");
 
             $("#selectdept").click(function(e){
-                 OpenModalDialog("@Url.Action("setdept")?mode=2", { caption: "选择用户组", width: 240, height: 300, onclose: selecgroup_callback });
+                 OpenModalDialog("@Url.Action("setdept")?mode=2", { caption: "选择用户组", width: 240, height: 300, onclose: selectgroup_callback });
             });
             
-            function selecgroup_callback(group) {
+            function selectgroup_callback(group) {
+                //debugger;
                 if (group && group.length > 0) {                   
-                  
+                    $("#DeptCode").val(group[0].value);
+                    $("#DeptName").val(group[0].text);
+                    $("#lbDeptName").text(group[0].text);
                 }
             }           
         });
